# Agents_PydanticAI_FastAPI

./: README.md  agent.py  api.py  pyproject.toml
